# seedy

./: Cargo.toml  README.md  inventory_request.grammar  justfile
src/: database.rs  lib.rs  recipe.rs
src/database/: duck_store.rs
