[package]
name = "bumblebee"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.0.0"
arrow-array = "55.0.0"
arrow-schema = "55.0.0"
async-trait = "0.1.88"
aws-config = "1.6.1"
aws-sdk-s3 = "1.82.0"
aws-sdk-sqs = "1.64.0"
crossbeam = "0.8.4"
duckdb = { version = "1.2.1", features = ["bundled"] }
env_logger = "0.11.8"
eyre = "0.6.12"
futures = "0.3.31"
libunftp = "0.20.3"
log = "0.4.27"
mongodb = "3.2.3"
object_store = { version = "0.12.0", features = ["aws"] }
parquet = { version = "55.0.0", features = ["arrow", "async"] }
rdkafka = "0.37.0"
redis = { version = "0.30.0", features = ["tokio-comp"] }
russh = "0.52.0"
russh-sftp = "2.1.1"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio" ] }
suppaftp = { version = "6.2.0", features = ["async"] }
tempfile = "3.19.1"
test-case = "3.3.1"
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
unftp-sbe-fs = "0.2.6"
url = "2.5.4"
winnow = "0.7.9"
